--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "binance-api-node",
-  "version": "0.9.2",
+  "name": "binance-api",
+  "version": "1.0.0",
   "description": "A node API wrapper for Binance",
   "main": "dist",
   "files": ["dist", "index.d.ts"],
@@ -48,6 +48,6 @@
     ],
     "babel": "inherit"
   },
-  "author": "Balthazar Gronon <bgronon@gmail.com>",
+  "author": "Allal Mohamed Lamine (original project: Balthazar Gronon)",
   "license": "MIT"
 }
