--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "binance-api",
+  "name": "binance-api-wrapper",
   "version": "1.0.0",
   "description": "A node API wrapper for Binance",
   "main": "dist",
@@ -37,9 +37,6 @@
     "nyc": "^11.2.1",
     "prettier": "^1.7.4",
     "rimraf": "^2.6.2"
-  },
-  "engines": {
-    "yarn": ">= 1.0.0"
   },
   "ava": {
     "require": [
