--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "binance-api-wrapper",
+  "name": "binance-client",
   "version": "1.0.0",
   "description": "A node API wrapper for Binance",
   "main": "dist",
