--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
     "eslint": "^4.9.0",
     "eslint-config-prettier": "^2.6.0",
     "eslint-config-zavatta": "^6.0.1",
-    "https-proxy-agent": "^5.0.0",
+    "net-proxy": "^1.0.0",
     "nyc": "^11.2.1",
     "prettier": "^1.7.4",
+    "proxy-http-agent": "^1.0.0",
     "rimraf": "^2.6.2"
   },
   "ava": {
@@ -48,7 +49,7 @@
       "babel-polyfill"
     ],
     "files": [
-      
+      "test/index.js",
       "test/proxyTest/index.js"
     ],
     "babel": "inherit"
