--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "launchProxy": "node test/proxyTest/startProxy.js"
   },
   "dependencies": {
+    "acorn": "^8.0.5",
     "html5-websocket": "^2.0.2",
     "isomorphic-fetch": "^2.2.1",
     "lodash.zipobject": "^4.1.3",
